# globwalk

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
examples/: list.rs
src/: doctests.rs  lib.rs
tests/: docs.rs
