[package]
name = "globwalk"
version = "0.7.3"
description = "Glob-matched recursive file system walking."
authors = ["Gilad Naaman <gilad@naaman.io>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/gilnaa/globwalk"
categories = ["filesystem"]
keywords = ["regex", "glob", "pattern", "walk", "iterator"]

[badges]
travis-ci = { repository = "Gilnaa/globwalk" }
appveyor  = { repository = "Gilnaa/globwalk" }

[dependencies]
walkdir = "2"
ignore = "0.4.6"

[dev-dependencies]
tempdir = "0.3"
docmatic = "0.1"
