[package]
name = "globwalk"
version = "0.8.1"
description = "Glob-matched recursive file system walking."
authors = ["Gilad Naaman <gilad@naaman.io>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/gilnaa/globwalk"
categories = ["filesystem"]
keywords = ["regex", "glob", "pattern", "walk", "iterator"]

[badges]
travis-ci = { repository = "Gilnaa/globwalk" }
appveyor  = { repository = "Gilnaa/globwalk" }

[dependencies]
walkdir = "2"
ignore = "0.4.11"
bitflags = "1.2"

[dev-dependencies]
tempdir = "0.3.6"
docmatic = "0.1.2"

# We're not using backtrace, really. It is just a deep dependency of docmatic.
# Locking down its version so that we can compile the tests using rustc 1.31.0
backtrace = "=0.3.35"
